--- a/test.html
+++ b/test.html
@@ -1,15 +1,3 @@
-<!Doctype html>
 <html>
-<h1>Type Design</h1>
-<h2>Serif Typefaces</h2>
-<p>Serif typefaces have small slabs at the ends of letter strokes.
-In general, srif fonts can make large amounts of text easier to read.</p>
-<hr>
-<h3>Baskerville</h3>
-<h4>Description</h4>
-<p>The history of the Baskerville typeface.</p>
-<hr>
-<h3>Georgia</h3>
-<p>Description and history of the georgia typeface.</p>
-<h2>Sans-serif Typefaces</h2>
-<p>Sans-serif typefaces do not have slabs at the ends of strokes.</p>
+This the test file 
+</html>
