--- a/Inline Element.html
+++ b/Inline Element.html
@@ -13,7 +13,7 @@ This is a test <dfn> data </dfn> <br>
 <abbr title="Web Design"> WD </abbr> <br>
 Water=H<sup>2</sup>O<br>
 E=mc<sub>2</sud><br>
-extra<wbr>ordinary
+extra <wbr> ordinary<br>
 
 </body>
 </html>
