--- a/HW Code.html
+++ b/HW Code.html
@@ -37,8 +37,15 @@ Others<br>
 <input type="Date"><br>
 
 <label>Country:</label>
-<input type="country"><br>
-
+<input type="text" list="countryname" name="country"><br>
+<datalist id="countryname">
+  <option value="India">
+    <option value="Australia">
+      <option value="Afghanistan">
+        <option value="south Africa">
+          <option value="Sirlanka">
+            <option value="England">
+</datalist>
 <label>Enquiry:</label>
 <textarea>
 </textarea><br>
