--- a/Frame.html
+++ b/Frame.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 <h1>Frames</h1>
-<iframe src="index1.html" width="300" height="500">
-<a href="index1.html">FRAME DATA</a>
+<iframe src="" width="300" height="500">
+<a href="index1">FRAME DATA</a>
 </iframe> 
 </body>
 </html>
