--- a/Inline Element.html
+++ b/Inline Element.html
@@ -11,8 +11,8 @@
 This is a test <dfn> data </dfn> <br>
 <q> This is a test data </q> <br>
 <abbr title="Web Design"> WD </abbr> <br>
-Water=H<sup>2</sup>O<br>
-E=mc<sub>2</sud><br>
+Water=H<sub>2</sub>O<br>
+E=mc<sup>2</sup><br>
 extra <wbr> ordinary<br>
 
 </body>
